# spaceborne-river-hydrometry-v1

./: LICENSE  README.md  river_inversion_results_1to8_metrics_anonymized.csv  river_observed_estimated_1985_2024.xlsx
GRF-CNN/: ModifiedSingularityIndex2D.m  Step1_GRF_GF2022_64index.m  Step2_GRF_GF2022_8index.m  bresenham.m  classRF_train.m  mmscale.m  test_code.m  varSizeBoxFilter.m
spaceborne-river-hydrometry-v1/: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
spaceborne-river-hydrometry-v1/configs/: example_config.yaml
spaceborne-river-hydrometry-v1/examples/: synthetic_workflow.py
spaceborne-river-hydrometry-v1/src/spaceborne_hydrometry/: __init__.py  bathymetry.py  connectivity.py  evaluation.py  fusion.py  smcbam.py  topology.py  width.py
spaceborne-river-hydrometry-v1/tests/: test_core.py
