[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spaceborne-river-hydrometry"
version = "1.0.0"
description = "Reference implementation for spaceborne river-network hydrometry"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Xuanwei Xing", email = "xxw23@mails.tsinghua.edu.cn"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24", "scipy>=1.10", "pandas>=2.0",
  "scikit-image>=0.21", "networkx>=3.1",
  "matplotlib>=3.7", "PyYAML>=6.0"
]

[project.optional-dependencies]
geo = ["rasterio>=1.3", "geopandas>=0.14", "shapely>=2.0"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]
